Criando pacote para views; Ajustando arquivos.ini.

--- a/development.ini
+++ b/development.ini
@@ -14,6 +14,9 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
+    pyramid_layout
+
+mako.directories = %(here)s/photoviewerexpress/templates
 
 sqlalchemy.url = sqlite:///%(here)s/PhotoViewerExpress.sqlite
 
