--- a/production.ini
+++ b/production.ini
@@ -13,6 +13,9 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
+    pyramid_layout
+
+mako.directories = %(here)s/collabportal/templates
 
 sqlalchemy.url = sqlite:///%(here)s/PhotoViewerExpress.sqlite
 
