Deform semi funcional.
Na pagina de admin, deixar no canto direito o form para adcionar.
Na canto direito, uma lista de usuario já cadastrados para remove/editar.

Verificar possibilidade de usar o form de add para editar.

--- a/development.ini
+++ b/development.ini
@@ -15,6 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
     pyramid_layout
+    deform_bootstrap
 
 mako.directories = %(here)s/photoviewerexpress/templates
 
