--- a/production.ini
+++ b/production.ini
@@ -20,6 +20,15 @@ mako.directories = %(here)s/photoviewerexpress/templates
 
 sqlalchemy.url = sqlite:///%(here)s/PhotoViewerExpress.sqlite
 
+### User photo viewer configurations
+# photos_path -> path to your picture's folder. It should have a 
+#                public and private folder inside it.
+# show_resolution -> Picture resolution when clicked.
+# thumb_resoulution -> Thumbnails resolution.
+photos_path = %(here)s/myPictures
+show_resolution = 1000
+thumb_resolution = 200
+
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
